# arm-bot

./: .gitignore  README.md
src/arm_bot_bridge/: Cargo.toml  README.md  package.xml
src/arm_bot_bridge/src/: arm_bot_bridge.rs
src/arm_bot_bridge/src/entry/: publish_entry.rs
src/arm_bot_bridge/src/error/: server_error.rs
src/arm_bot_bridge/src/serialize/: joint_state.rs  mod.rs
src/arm_bot_bringup/: CMakeLists.txt  package.xml
src/arm_bot_bringup/launch/: arm_bot.launch.py  controller.launch.py  simulated_robot.launch.py
src/arm_bot_controller/: Cargo.toml  package.xml
src/arm_bot_controller/src/: arm_bot_slider_control.rs
src/arm_bot_mqtt_interface/: Cargo.toml  package.xml
src/arm_bot_mqtt_interface/.cargo/: config.toml
src/arm_bot_mqtt_interface/src/: arm_bot_mqtt_interface.rs
src/armbot_bringup/: CMakeLists.txt  package.xml
src/armbot_controller/: CMakeLists.txt  package.xml  setup.py
src/armbot_controller/armbot_controller/: slider_control.py
src/armbot_controller/config/: armbot_controllers.yaml
src/armbot_controller/launch/: controller.launch.py  slider_controller.launch.py
src/armbot_description/: CMakeLists.txt  README.md  package.xml
src/armbot_description/launch/: display.launch.py  gazebo.launch.py
src/armbot_description/rviz/: display.rviz
src/armbot_description/urdf/: armbot.urdf.xacro  armbot_gazebo.xacro  armbot_ros2_control.xacro
src/armbot_moveit/: CMakeLists.txt  package.xml
src/armbot_moveit/config/: armbot.srdf  initial_positions.yaml
src/armbot_moveit/launch/: moveit.launch.py
src/armbot_mqtt_interface/: Cargo.toml  package.xml
src/armbot_mqtt_interface/.cargo/: config.toml
src/armbot_mqtt_interface/src/: armbot_mqtt_interface.rs
src/armbot_msgs/: CMakeLists.txt  package.xml
src/armbot_remote/: CMakeLists.txt  package.xml
src/armbot_remote/armbot_remote/: alexa_interface.py
src/armbot_remote/launch/: remote_interface.launch.py
src/armbot_remote/src/: task_server.cpp
src/armbot_utils/: CMakeLists.txt  package.xml
src/armbot_utils/armbot_utils/: angle_conversion.py
src/ros2_rust/: ros2_rust_humble.repos
src/server_bridge/: Cargo.toml  README.md  package.xml
src/server_bridge/.cargo/: config.toml
src/server_bridge/src/: tcp_server.rs  websocket_server.rs
src/server_bridge/src/def/: auth.rs  joint_state.rs  mod.rs
src/server_bridge/src/entry/: mod.rs
src/server_bridge/src/error/: server_error.rs
