<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arm_bot_bridge</name>
    <version>0.3.1</version>
    <description>Package containing a bridge for web-socket server.</description>
    <maintainer email="loidinh.git@gmail.com">Loi Dinh</maintainer>
    <license>Apache License 2.0</license>

    <depend>rclrs</depend>
    <depend>rosidl_runtime_rs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>builtin_interfaces</depend>

    <export>
        <build_type>ament_cargo</build_type>
    </export>
</package>