[package]
name = "server_bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "websocket_server"
path = "src/websocket_server.rs"

[[bin]]
name = "tcp_server"
path = "src/tcp_server.rs"

[dependencies.rumqttc]
version = "0.24.0"

[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.std_msgs]
version = "*"

[dependencies.builtin_interfaces]
version = "*"

[dependencies.sensor_msgs]
version = "*"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.64"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
actix-web = "4.9.0"
actix-cors = "0.7.0"